# Serri

./: .gitignore  Cargo.toml  Cross.toml  package-lock.json  package.json  readme.md  serri.sample.toml  serri.service  serri.toml  webpack.config.js
.github/workflows/: build.yml  rust.yml
src/: config.rs  main.rs  serial_controller.rs  util.rs  web.rs
src/util/: read_up_to.rs
src/web/: device.rs  template.rs
templates/: 404.html  about.html  alert.html  base.html  base.js  config.html  device.html  device.js  device_popout.html  device_view.html  index.html  index.js  terminal_scripts.html  terminal_settings.html
templates/device/: device.html  device.js  device_popout.html  terminal.html  terminal_scripts.html
web/: device.html  device.js  device.scss  index.html  index.js
