[package]
name = "serri"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["ws"] }
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.207", features = ["derive"] }
serialport = "4.5.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "net", "rt-multi-thread", "sync"] }
toml = "0.8.19"
tower-http = { version = "0.5.2", features = ["fs"] }
tokio-util = "0.7.11"
tinytemplate = "1.2.1"
mio-serial = "5.0.5"
mio = { version = "0.8.11", features = ["os-ext", "os-poll"] }

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH"
]
