[package]
name = "serri"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["ws"] }
dashmap = "6.0.1"
futures = "0.3.30"
ringbuf = "0.4.4"
serde = { version = "1.0.207", features = ["derive"] }
serialport = { version = "4.5.0", features = ["serde"] }
thiserror = "1.0.63"
tinytemplate = "1.2.1"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal", "sync"] }
toml = "0.8.19"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

mio = { version = "1.0.2", features = ["os-ext", "os-poll"] }
mio-serial = { path = "../mio-serial" }

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH"
]
